--- a/frontend/music-player/src/App.css
+++ b/frontend/music-player/src/App.css
@@ -1,26 +1,106 @@
-body{
+body {
+  font-family: 'Arial', sans-serif; /* Fuente clara y legible */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Asegura que el body ocupe toda la altura de la ventana */
+  margin: 0;
+  background-color: #161f27;
+  color: rgb(196, 192, 192); /* Color del texto claro sobre el fondo oscuro */
+}
+
+.App {
+  width: 80%; /* Ancho del contenido centrado */
+  max-width: 1200px; /* Tamaño máximo del contenido para pantallas grandes */
+  background-color: rgba(255, 255, 255, 0.1); /* Fondo ligeramente transparente para resaltar el contenido */
+  padding: 20px;
+  border-radius: 8px; /* Bordes redondeados para un aspecto más suave */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para dar profundidad */
+}
+
+
+input, button {
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  height: 30px;
+  margin: 10px;
+}
+
+input[type="text"], input[type="email"] {
+  background-color: #ffffff;
+  color: #333;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+  height: 35px;
+
+  &:hover {
+    background-color: #0056b3;
+  }
+}
+
+
+form div {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+
+audio {
+  display: inline;
+  width: 100%;
+  max-width: 600px;
+  margin: 20px auto;
   background-color: #161f27;
   color: rgb(196, 192, 192);
 }
 
-.App {
-  text-align: center;
+/* Panel de controles */
+audio::-webkit-media-controls-panel {
+  background-color: #464141;
+  color: rgb(196, 192, 192);
+  border-radius: 10px;
 }
 
-input {
-  margin: 10px;
-  padding: 5px;
+/* Botón de reproducción/pausa */
+audio::-webkit-media-controls-play-button,
+audio::-webkit-media-controls-pause-button {
+  background-color: #007bff;
+  color: rgb(196, 192, 192);
+  border-radius: 50%;
 }
 
-button {
-  margin: 10px;
-  padding: 10px;
+/* Deslizador de volumen */
+audio::-webkit-media-controls-volume-slider-container {
+  background-color: #333;
 }
 
-form div {
-  margin-bottom: 15px;
+audio::-webkit-media-controls-volume-slider {
+  background-color: #555;
 }
 
-label {
-  margin-right: 10px;
+/* Texto de tiempo */
+audio::-webkit-media-controls-current-time-display,
+audio::-webkit-media-controls-time-remaining-display {
+  color: rgb(196, 192, 192);
+}
+
+/* Botones de avance/reproducción */
+audio::-webkit-media-controls-seek-back-button,
+audio::-webkit-media-controls-seek-forward-button {
+  background-color: #007bff;
+  color: rgb(196, 192, 192);
+  border-radius: 50%;
 }
